<resources>

    <!--Pantalla inicio/Splash-->
    <string name="app_name">TruequeWorld</string>
    <string name="eslogan">Si no lo usas, ¡truequéalo!</string>
    <string name="google">Continuar con Google</string>
    <string name="twlogin">Iniciar sesión</string>
    <string name="twregister">Crear una cuenta</string>
    <string name="weblogingoogleid">94914021089-bibo61fkr1qdhtjvdvhtag0fcbhhklpr.apps.googleusercontent.com</string>

    <!--Registro/login-->
    <string name="regnow">Registrarse</string>
    <string name="inicia">Inicia sesión</string>
    <string name="registra">Regístrate</string>
    <string name="missu">Te hemos echado de menos </string>
    <string name="whatuwaiting">¿Qué estás esperando? ¡A truequear!</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="email">Email</string>
    <string name="pass">Antigua Contraseña</string>
    <string name="confpass">Nueva contraseña</string>
    <string name="phone">Teléfono (opcional)</string>

    <!--Preferencias-->
    <string name="tellmemoreaboutyoulove">Queremos saber más de ti</string>
    <string name="next">Siguiente</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="programacion">Entretenimiento</string>
    <string name="_3d">Otros</string>
    <string name="sesiografia">Coleccion</string>
    <string name="virtual">Anime</string>
    <string name="fotografia">Alimentación</string>
    <string name="libros">Moda</string>
    <string name="anuncios">Escolar</string>
    <string name="munecas">Deporte</string>
    <string name="videojuegos">Vehiculos</string>
    <string name="camara">Infantil</string>
    <string name="juguetes">Juegos</string>
    <string name="tecnologia">Tecnología</string>

    <!--Encabezado-->
    <string name="app_name2">Trueque\nWorld</string>

    <!--MainScreen-->
    <string name="search">Estoy buscando...</string>
    <string name="recom">Recomendado para ti</string>
    <string name="more">Ver todo</string>
    <string name="name_main_cv">Nombre producto</string>
    <string name="exchange_now">Truequear</string>
    <string name="info_alert">¡Encontraste lo que buscabas! :) </string>
    <string name="info_alert2">Ahora se te dirigirá a tu perfil para elegir el producto que ofrecerás</string>
    <string name="truequear">¡A truequear!</string>
    <string name="changed_opinion">Mejor no...</string>

    <!--AddProduct-->
    <string name="add_now_tp">AÑADIR</string>
    <string name="marca">MARCA</string>
    <string name="tp_name">Nombre del\ntruequeproducto</string>
    <string name="tp_value">VALOR EN TP</string>
    <string name="tp_category">CATEGORÍA</string>
    <string name="tp_status">ESTADO</string>
    <string name="title_add_tp">Título</string>
    <string name="description_add_tp">Descripción detallada del producto: marca, estilo...</string>
    <string name="pic_add_tp">+ Fotos de tu truequeproducto</string>
    <string name="loc_add_tp">Ubicación</string>
    <string name="default_tp">0 TP</string>
    <string name="default_category">-</string>
    <string name="new_tp">TruequeProducto</string>

    <!--Exchanges received/sent-->
    <string name="tp_location">Ubicación de la persona</string>
    <string name="x_tp">X truequeproductos</string>
    <string name="x_tp_sent">X trueques propuestos</string>
    <string name="exchange_requests">Solicitudes de trueque</string>
    <string name="return_exchanges">Volver a trueques</string>
    <string name="wants_ex">¡Quiere truequear!</string>
    <string name="accept_ex">Aceptar</string>
    <string name="reject_ex">Rechazar</string>

    <!--Comunes-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>

    <!--User profile-->
    <string name="actual_tp">TP: </string>
    <string name="settings">Ajustes</string>
    <string name="saved_ones">Mis productos</string>
    <string name="my_exchanges">Mis intercambios</string>
    <string name="account">CUENTA</string>
    <string name="tp_pro">TruequeWorld PRO</string>
    <string name="safety">Privacidad</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="user_id">ID: </string>
    <string name="save">GUARDAR</string>

    <!--No sé/No usados-->
    <string name="tp">Trueque\nPuntos</string>
    <string name="type_a_message">Type a message</string>
    <string name="saved">Guardado</string>


    <!--Privacidad-->
    <string name="close">CERRAR</string>
    <string name="conditions">
        POLÍTICA DE PRIVACIDAD DE TRUEQUEWORLD\n\n\n
        Bienvenido a TruequeWorld, la aplicación que conecta a usuarios apasionados por el trueque y la economía colaborativa. En TruequeWorld, valoramos y respetamos la privacidad de nuestros usuarios. Esta política de privacidad describe cómo recopilamos, utilizamos y compartimos la información personal que obtenemos a través de nuestra aplicación.\n\n\n
        Información que recopilamos\n\n
        Información Personal\n
        Al registrarte en TruequeWorld, te pedimos cierta información personal, como tu nombre, dirección de correo electrónico y otros datos necesarios para ofrecerte nuestros servicios. Esta información se utiliza para personalizar tu experiencia en la aplicación y facilitar la conexión con otros usuarios.\n\n
        Información de transacciones\n
        Cuando realizas trueques a través de TruequeWorld, recopilamos información relacionada con esas transacciones, como los productos intercambiados y las fechas de las transacciones. Esta información se utiliza para mejorar nuestros servicios y garantizar la seguridad de la plataforma.\n\n
        Datos de ubicación\n
        Para ofrecerte una experiencia más relevante y personalizada, TruequeWorld puede recopilar datos de ubicación cuando utilizas la aplicación. Estos datos se utilizan para mostrar trueques cercanos y mejorar la funcionalidad de la aplicación.\n\n\n
        Cómo utilizamos tu información\n
        La información recopilada se utiliza para ofrecerte y mejorar nuestros servicios, personalizar tu experiencia en la aplicación, facilitar trueques y garantizar la seguridad de la plataforma. Además, podemos utilizar la información para enviar actualizaciones sobre la aplicación y ofrecerte contenido relevante.\n\n
        Compartir información\n
        TruequeWorld puede compartir tu información personal con otros usuarios involucrados en trueques para facilitar la comunicación y el intercambio de productos. También podemos compartir información de manera agregada y anónima con fines estadísticos y de análisis.\n\n
        Cookies y tecnologías similares\n
        TruequeWorld utiliza cookies y tecnologías similares para mejorar la funcionalidad de la aplicación y recopilar información sobre el uso de la plataforma. Puedes gestionar la configuración de cookies a través de la configuración de tu dispositivo.\n\n
        Seguridad de la información\n
        Nos comprometemos a proteger la seguridad de tu información personal. Implementamos medidas de seguridad físicas, electrónicas y administrativas para garantizar la confidencialidad y la integridad de los datos.\n\n
        Cambios en la política de privacidad\n
        TruequeWorld se reserva el derecho de realizar cambios en esta política de privacidad en cualquier momento. Se te notificará sobre cambios significativos y se te dará la oportunidad de revisar y aceptar las modificaciones.\n\n
        Contacto\n
        Si tienes preguntas o inquietudes sobre nuestra política de privacidad, por favor, contáctanos a través de GitHub.\n\n\n
        Gracias por confiar en TruequeWorld. ¡Truequea con confianza!
    </string>


</resources>