<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:id="@+id/register_screen"
    android:background="@drawable/desplegable"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="end">
        <ImageButton
            android:id="@+id/close_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_button"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/t_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:scaleType="fitXY"
        android:text="@string/registra"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <TextView
            android:id="@+id/eslogan_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/whatuwaiting"
            />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingBottom="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingBottom="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:hint="@string/surname" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingBottom="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingBottom="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:hint="@string/pass" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingBottom="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:hint="@string/confpass" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="25dp"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registra"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:backgroundTint="#FFFEC941"
            android:textSize="25dp"
            android:textAllCaps="true"/>

    </LinearLayout>



</LinearLayout>